* CSS. Fixed overlap border color in Com Tabset - add variable.

--- a/css/index.css
+++ b/css/index.css
@@ -9052,7 +9052,7 @@ html.ie9 .com__palette .b-range {
   border-radius: 0 0 3px 3px;
 }
 .com__tabset.is-tabs-bottom > .com__tabset__head-tabs ul li.active {
-  border-top-color: #fff;
+  border-top-color: #ffffff;
 }
 .com__tabset.is-tabs-bottom > .com__tabset__content {
   border-radius: 3px;
