--- a/less/components/Tabset.less
+++ b/less/components/Tabset.less
@@ -337,7 +337,7 @@
             border-radius: @ComTabset-BorderRadius @ComTabset-BorderRadius 0 0;
 
             &.active {
-                border-bottom-color: #ffffff;
+                border-bottom-color: @ComTabset-BorderOverlap;
             }
         }
     }
@@ -352,7 +352,7 @@
             border-radius: 0 0 @ComTabset-BorderRadius @ComTabset-BorderRadius;
 
             &.active {
-                border-top-color: #fff;
+                border-top-color: @ComTabset-BorderOverlap;
             }
         }
     }
@@ -367,7 +367,7 @@
             border-radius: 0 @ComTabset-BorderRadius @ComTabset-BorderRadius 0;
 
             &.active {
-                border-left-color: #ffffff;
+                border-left-color: @ComTabset-BorderOverlap;
             }
         }
     }
@@ -382,7 +382,7 @@
             border-radius: @ComTabset-BorderRadius 0 0 @ComTabset-BorderRadius;
 
             &.active {
-                border-right-color: #ffffff;
+                border-right-color: @ComTabset-BorderOverlap;
             }
         }
     }
